# eval-harness

./: .gitignore  README.md  pyproject.toml
config/: eng_smoke.yaml  research_rubric.yaml  single_test.yaml  swebench_lite.yaml  system_integrity.yaml
config/config/: forecasting_rubric.yaml  swebench_mini.yaml  swebench_single.yaml
eval/: __init__.py  agent_logs.py  client.py  controller.py  cron_entrypoint.py  database.py  env.py  models.py  observability.py  pricing.py  regression.py  runner_cli.py  scoring.py  supabase_client.py  swebench_loader.py
tests/: test_agent_logs.py  test_controller_seed.py  test_supabase_client.py
